--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "postinstall": "npm run build",
+    "postinstall": "npm run build"
   },
   "keywords": ["email", "scheduler", "typescript"],
   "author": "klubiniecki",
