feat: new script

--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "price-emailer",
+  "name": "crypto-price-emailer",
   "version": "1.0.0",
-  "description": "Daily price email scheduler",
+  "description": "Daily crypto price email scheduler",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "test": "echo \"No tests specified\" && exit 0"
   },
-  "keywords": ["email", "scheduler", "typescript"],
-  "author": "klubiniecki",
+  "keywords": ["crypto", "email", "scheduler", "typescript"],
+  "author": "krisl",
   "license": "MIT",
   "dependencies": {
     "node-cron": "^3.0.2",
-    "nodemailer": "^6.9.7",
-    "node-fetch": "^2.7.0"
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
     "@types/node-cron": "^3.0.8",
     "@types/nodemailer": "^6.4.13",
-    "@types/node-fetch": "^2.6.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
